--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
   <body>
 
   <input type="text" class="user-input-title" placeholder="Enter the Title">
+  <div>
   <textarea class="user-input-body" placeholder="Enter the body of text"></textarea>
-
+  </div>
   <button class="add-text-btn">add text</button>
   <button class="del-text-btn">delete text</button>
+  <button class="edit-text-btn">edit text</button>
 
   <div class="display"></div>
   </body>
